# cmake_template_project

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.py
apps/hello_world/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt
cmake/: conan.cmake  default_settings.cmake  functions.cmake  runtime.cmake  versioning.cmake  warnings.cmake
include/hello_world/: hello_world.h
libs/hello_world/: CMakeLists.txt  hello_world.cpp
resources/: version.h.in  versioninfo.cpp.in  versioninfo.rc.in
tests/: CMakeLists.txt
